# crew_resume_screening

./: README.md  demo.ipynb  pyproject.toml
blogs/: blog.md
src/crewai_resume_screening/: crew.py  main.py
src/crewai_resume_screening/config/: agents.yaml  tasks.yaml
