[project]
name = "crewai_resume_screening"
version = "0.1.0"
description = "crewai_resume_screening using crewAI"
authors = [{ name = "Husen Basha", email = "husensufi213@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai-tools>=1.7.2",
    "crewai[tools]==1.7.2",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "fastapi-sso>=0.17.0",
    "langchain>=1.2.2",
    "langchain-groq>=1.1.1",
    "litellm>=1.75.3",
    "python-dotenv>=1.1.1",
]

[project.scripts]
crewai_resume_screening = "crewai_resume_screening.main:run"
run_crew = "crewai_resume_screening.main:run"
train = "crewai_resume_screening.main:train"
replay = "crewai_resume_screening.main:replay"
test = "crewai_resume_screening.main:test"
run_with_trigger = "crewai_resume_screening.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
